@@ -11,17 +11,20 @@
 	<div>
 		<strong><a href=
 		"http://trac.cyberduck.ch/query?status=closed&amp;milestone=2.8.2">
-		2.8.2</a></strong> <em>Dec-06-2007</em> (Build $Revision$)<br />
+		2.8.2</a></strong> <em>Dec-11-2007</em> (Build $Revision$)<br />
 		
 		<ul>
 			<li>[Feature] Show transfer progress when using browser session [<a href="http://trac.cyberduck.ch/ticket/1313">#1313</a>]</li>
 			<li>[Feature] Accept relative paths in bookmark setting [<a href="http://trac.cyberduck.ch/ticket/1167">#1167</a>]</li>
 			<li>[Feature] Added MacVim to the list of supported editors (http://slashpunt.org/vim/) [<a href="http://trac.cyberduck.ch/ticket/1322">#1322</a>]</li>
 			<li>[Feature] Ugly folder icons rendered (10.5)</li>
+			<li>[Feature] Back and forward history menu for browser navigation buttons [<a href="http://trac.cyberduck.ch/ticket/1080">#1080</a>]</li>
 			<li>[Bugfix] Writing corrupted entries to the Keychain (10.5) [<a href="http://trac.cyberduck.ch/ticket/1354">#1354</a>]<br />
 				<strong>Warning! Due to this bug you may have to reenter your passwords the first time connecting to each server</strong></li>
 			<li>[Bugfix] Cannot drag files to working directory when there is no space left [<a href="http://trac.cyberduck.ch/ticket/60">#60</a>]</li>
 			<li>[Bugfix] Bookmarks drawer remembers width [<a href="http://trac.cyberduck.ch/ticket/371">#371</a>]</li>
+			<li>[Bugfix] Crashes after application launch (10.3.9) [<a href="http://trac.cyberduck.ch/ticket/1339">#1339</a>]</li>
+			<li>[Bugfix] Downloading multiple files with same name in outline hierarchy [<a href="http://trac.cyberduck.ch/ticket/1400">#1400</a>]</li>
 		</ul>
 	</div>
 
